--- a/Todolist/package.json
+++ b/Todolist/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.4",
     "framer-motion": "^11.3.28",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
