--- a/Todolist/package.json
+++ b/Todolist/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.28",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
