--- a/To_do_list_Mobile/package.json
+++ b/To_do_list_Mobile/package.json
@@ -24,6 +24,7 @@
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "To_do_list_Mobile": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
+    "@ionic/lab": "3.2.15",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
